2002-06-29  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* libutil++/filename_match.cpp:
	* libutil++/filename_match.h: add a convenience ctor.

	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* op_time.cpp: better error message for EPERM problem
	* op_time_options.h:
	* op_time_options.cpp: allow the user to specify explicitely on which
	  filename he want to work

2002-06-29  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* acinclude.m4:
	* configure.in:
	* make.common.in:
	* gui/Makefile.in:
	* gui/ui/Makefile.in: better qt3 handling

	* doc/oprofile.1.in:
	* doc/oprofile.xml: fix oprof_start --option=blah

2002-06-28  Philippe Elie  <phil.el@wanadoo.fr>

	* .cvsignore: minor fix

	* configure.in:
	* acinclude.m4: ugly temporary hack to compile with kde3/qt3
	* oprof_start.cpp:
	* oprof_start_config.cpp: gcc-3.1 and qt3 fix (qt3 have an
	  hex() somewhere ...)

	* module/x86/op_fixmap.c: minor comment fix

2002-06-26  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* module/compat.h:
	* module/x86/op_apic.c:
	* module/x86/op_fixmap.c:
	* module/x86/op_nmi.c: preemptible kernel support. This fix point
	  #2 of kernel_src/Documentation/preempt-locking.txt

2002-06-25  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.1.in:
	* doc/oprofile.xml: document op_start --kernel-range option
	* gui/oprf_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h: 
	* gui/ui/oprof_start_base.ui:
	* utils/op_start: implement --kernel-range

	* gui/Makefile.in: force ui sub-dir build
	
2002-06-25  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* configure.in: new AX_KERNEL_VERSION()  to allow kernel version check,
	  use it to check minimal kernel version and fix 2.5.19 breakage
	* module/.cvsignore:
	* module/x86/.cvsignore: add .*.cmd
	* module/Makefile.in:
	* module/x86/Makefile.in: fix 2.5.19 make through EXTRA_CFLAGS_MODULE
	* module/compat22.h: fix missing BUG() definition in 2.2 kernel